feat: Type arguments
